@@ -1,13 +1,13 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
-	<groupId>org.ibissource</groupId>
-	<artifactId>ibis-adapterframework-parent</artifactId>
+	<groupId>org.frankframework</groupId>
+	<artifactId>frankframework-parent</artifactId>
 	<version>${revision}</version>
 	<packaging>pom</packaging>
 
 	<properties>
-		<revision>8.0-SNAPSHOT</revision>
+		<revision>8.1.0-SNAPSHOT</revision>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<maven.compiler.target>11</maven.compiler.target>
 		<maven.compiler.source>11</maven.compiler.source>
@@ -19,7 +19,7 @@
 		<jackson.version>2.16.0</jackson.version>
 		<cxf.version>3.6.2</cxf.version>
 		<spring.version>5.3.31</spring.version>
-		<spring-security.version>5.8.8</spring-security.version>
+		<spring-security.version>5.8.9</spring-security.version>
 		<spring-integration.version>5.5.20</spring-integration.version>
 
 		<narayana.version>5.13.1.Final</narayana.version>
@@ -27,7 +27,7 @@
 		<micrometer.version>1.12.1</micrometer.version>
 		<argLine /> <!-- add empty default argLine so Surefire won't fail when JaCoCo isn't present -->
 		<!-- property [iaf.rootdir] is available to get the root of the project, because of the [directory-maven-plugin] -->
-		<frankdoc.version>1.2-SNAPSHOT</frankdoc.version>
+		<frankdoc.version>2.0-SNAPSHOT</frankdoc.version>
 		<javadoc-plugin.version>3.6.3</javadoc-plugin.version>
 
 		<!-- DB Driver Versions -->
@@ -38,7 +38,7 @@
 		<mssql.driver.version>12.4.2.jre11</mssql.driver.version>
 		<mysql.driver.version>8.2.0</mysql.driver.version>
 		<!-- Should upgrade to new MariaDB driver 3.1.4, 3.2.0 or newer for JDK17 support but currently not working with XA transaction managers in the framework. -->
-		<mariadb.driver.version>3.3.1</mariadb.driver.version>
+		<mariadb.driver.version>3.3.2</mariadb.driver.version>
 		<postgresql.driver.version>42.7.1</postgresql.driver.version>
 		<mongodb.driver.version>4.11.1</mongodb.driver.version>
 
@@ -49,8 +49,8 @@
 		<geronimo.j2ee.spec.version>1.0.1</geronimo.j2ee.spec.version>
 	</properties>
 
-	<name>Ibis AdapterFramework parent</name>
-	<description>The Ibis Adapter Framework is an easy-to-use, stateless integration framework which allows (transactional) messages to be modified and exchanged between different systems.</description>
+	<name>Frank!Framework parent</name>
+	<description>The Frank!Framework is an easy-to-use, stateless integration framework which allows (transactional) messages to be modified and exchanged between different systems.</description>
 	<url>https://frankframework.org</url>
 
 	<organization>
@@ -130,7 +130,7 @@
 			<dependency>
 				<groupId>io.netty</groupId>
 				<artifactId>netty-transport-native-epoll</artifactId>
-				<version>4.1.103.Final</version>
+				<version>4.1.104.Final</version>
 			</dependency>
 			<dependency>
 				<groupId>com.google.guava</groupId>
@@ -140,154 +140,149 @@
 			<!-- End Lock transient deps -->
 
 			<dependency>
-				<groupId>org.ibissource</groupId>
-				<artifactId>ibis-adapterframework-commons</artifactId>
+				<groupId>org.frankframework</groupId>
+				<artifactId>frankframework-commons</artifactId>
 				<version>${project.version}</version>
 			</dependency>
 			<dependency>
-				<groupId>org.ibissource</groupId>
-				<artifactId>ibis-adapterframework-security</artifactId>
+				<groupId>org.frankframework</groupId>
+				<artifactId>frankframework-security</artifactId>
 				<version>${project.version}</version>
 			</dependency>
 			<dependency>
-				<groupId>org.ibissource</groupId>
-				<artifactId>iaf-management-gateway</artifactId>
+				<groupId>org.frankframework</groupId>
+				<artifactId>frankframework-management-gateway</artifactId>
 				<version>${project.version}</version>
 			</dependency>
 			<dependency>
-				<groupId>org.ibissource</groupId>
-				<artifactId>ibis-adapterframework-core</artifactId>
+				<groupId>org.frankframework</groupId>
+				<artifactId>frankframework-core</artifactId>
 				<version>${project.version}</version>
 			</dependency>
 			<dependency>
-				<groupId>org.ibissource</groupId>
+				<groupId>org.frankframework</groupId>
 				<artifactId>credentialprovider</artifactId>
 				<version>${project.version}</version>
 			</dependency>
 			<dependency>
-				<groupId>org.ibissource</groupId>
-				<artifactId>ibis-adapterframework-ifsa</artifactId>
+				<groupId>org.frankframework</groupId>
+				<artifactId>frankframework-tibco</artifactId>
 				<version>${project.version}</version>
 			</dependency>
 			<dependency>
-				<groupId>org.ibissource</groupId>
-				<artifactId>ibis-adapterframework-tibco</artifactId>
+				<groupId>org.frankframework</groupId>
+				<artifactId>frankframework-sap</artifactId>
 				<version>${project.version}</version>
 			</dependency>
 			<dependency>
-				<groupId>org.ibissource</groupId>
-				<artifactId>ibis-adapterframework-sap</artifactId>
+				<groupId>org.frankframework</groupId>
+				<artifactId>frankframework-messaging</artifactId>
 				<version>${project.version}</version>
 			</dependency>
 			<dependency>
-				<groupId>org.ibissource</groupId>
-				<artifactId>ibis-adapterframework-messaging</artifactId>
+				<groupId>org.frankframework</groupId>
+				<artifactId>frankframework-larva</artifactId>
 				<version>${project.version}</version>
 			</dependency>
 			<dependency>
-				<groupId>org.ibissource</groupId>
-				<artifactId>ibis-adapterframework-larva</artifactId>
+				<groupId>org.frankframework</groupId>
+				<artifactId>frankframework-akamai</artifactId>
 				<version>${project.version}</version>
 			</dependency>
 			<dependency>
-				<groupId>org.ibissource</groupId>
-				<artifactId>ibis-adapterframework-akamai</artifactId>
+				<groupId>org.frankframework</groupId>
+				<artifactId>frankframework-cmis</artifactId>
 				<version>${project.version}</version>
 			</dependency>
 			<dependency>
-				<groupId>org.ibissource</groupId>
-				<artifactId>ibis-adapterframework-cmis</artifactId>
-				<version>${project.version}</version>
-			</dependency>
-			<dependency>
-				<groupId>org.ibissource</groupId>
-				<artifactId>ibis-adapterframework-console</artifactId>
+				<groupId>org.frankframework</groupId>
+				<artifactId>frankframework-console</artifactId>
 				<version>${project.version}</version>
 				<type>pom</type>
 			</dependency>
 			<dependency>
-				<groupId>org.ibissource</groupId>
-				<artifactId>ibis-adapterframework-console-frontend</artifactId>
+				<groupId>org.frankframework</groupId>
+				<artifactId>frankframework-console-frontend</artifactId>
 				<version>${project.version}</version>
 			</dependency>
 			<dependency>
-				<groupId>org.ibissource</groupId>
-				<artifactId>ibis-adapterframework-console-backend</artifactId>
+				<groupId>org.frankframework</groupId>
+				<artifactId>frankframework-console-backend</artifactId>
 				<version>${project.version}</version>
 			</dependency>
 			<dependency>
-				<groupId>org.ibissource</groupId>
-				<artifactId>ibis-adapterframework-console-webapp</artifactId>
+				<groupId>org.frankframework</groupId>
+				<artifactId>frankframework-console-webapp</artifactId>
 				<version>${project.version}</version>
 			</dependency>
 			<dependency>
-				<groupId>org.ibissource</groupId>
-				<artifactId>ibis-adapterframework-webapp</artifactId>
+				<groupId>org.frankframework</groupId>
+				<artifactId>frankframework-webapp</artifactId>
 				<version>${project.version}</version>
 				<type>war</type>
 			</dependency>
 			<dependency>
-				<groupId>org.ibissource</groupId>
-				<artifactId>ibis-adapterframework-ear</artifactId>
+				<groupId>org.frankframework</groupId>
+				<artifactId>frankframework-ear</artifactId>
 				<version>${project.version}</version>
 				<type>ear</type>
 			</dependency>
 			<dependency>
-				<groupId>org.ibissource</groupId>
-				<artifactId>ibis-adapterframework-test</artifactId>
+				<groupId>org.frankframework</groupId>
+				<artifactId>frankframework-test</artifactId>
 				<version>${project.version}</version>
 			</dependency>
 			<dependency>
-				<groupId>org.ibissource</groupId>
-				<artifactId>ibis-adapterframework-test-integration</artifactId>
+				<groupId>org.frankframework</groupId>
+				<artifactId>frankframework-test-integration</artifactId>
 				<version>${project.version}</version>
 			</dependency>
 			<dependency>
-				<groupId>org.ibissource</groupId>
-				<artifactId>ibis-adapterframework-idin</artifactId>
+				<groupId>org.frankframework</groupId>
+				<artifactId>frankframework-idin</artifactId>
 				<version>${project.version}</version>
 			</dependency>
 			<dependency>
-				<groupId>org.ibissource</groupId>
-				<artifactId>ibis-adapterframework-ladybug</artifactId>
+				<groupId>org.frankframework</groupId>
+				<artifactId>frankframework-ladybug</artifactId>
 				<version>${project.version}</version>
 			</dependency>
 			<dependency>
-				<groupId>org.ibissource</groupId>
-				<artifactId>ibis-adapterframework-aspose</artifactId>
+				<groupId>org.frankframework</groupId>
+				<artifactId>frankframework-aspose</artifactId>
 				<version>${project.version}</version>
 			</dependency>
 			<dependency>
-				<groupId>org.ibissource</groupId>
-				<artifactId>ibis-adapterframework-aws</artifactId>
+				<groupId>org.frankframework</groupId>
+				<artifactId>frankframework-aws</artifactId>
 				<version>${project.version}</version>
 			</dependency>
 			<dependency>
-				<groupId>org.ibissource</groupId>
-				<artifactId>ibis-adapterframework-dbms</artifactId>
+				<groupId>org.frankframework</groupId>
+				<artifactId>frankframework-dbms</artifactId>
 				<version>${project.version}</version>
 			</dependency>
 			<dependency>
-				<groupId>org.ibissource</groupId>
-				<artifactId>nn-specials</artifactId>
+				<groupId>org.frankframework</groupId>
+				<artifactId>frankframework-nn-specials</artifactId>
 				<version>${project.version}</version>
 			</dependency>
 			<dependency>
-				<groupId>org.ibissource</groupId>
-				<artifactId>ibis-adapterframework-batch</artifactId>
+				<groupId>org.frankframework</groupId>
+				<artifactId>frankframework-batch</artifactId>
 				<version>${project.version}</version>
 			</dependency>
 
 
 			<dependency>
-				<groupId>org.ibissource</groupId>
-				<artifactId>bundle-minimal</artifactId>
+				<groupId>org.frankframework</groupId>
+				<artifactId>frankframework-bundle-minimal</artifactId>
 				<version>${project.version}</version>
 				<type>pom</type>
 			</dependency>
 			<dependency>
-				<groupId>org.ibissource</groupId>
-				<artifactId>bundle-full</artifactId>
+				<groupId>org.frankframework</groupId>
+				<artifactId>frankframework-bundle-full</artifactId>
 				<version>${project.version}</version>
 				<type>pom</type>
 			</dependency>
@@ -558,6 +553,12 @@
 				<scope>test</scope>
 			</dependency>
 			<dependency>
+				<groupId>org.mockito</groupId>
+				<artifactId>mockito-junit-jupiter</artifactId>
+				<version>5.8.0</version>
+				<scope>test</scope>
+			</dependency>
+			<dependency>
 				<groupId>org.hamcrest</groupId>
 				<artifactId>hamcrest</artifactId>
 				<version>2.2</version>
@@ -598,10 +599,9 @@
 				<version>2.0.0</version>
 				<configuration>
 					<excludedModules>
-						<excludedModule>ibis-adapterframework-ifsa</excludedModule>
-						<excludedModule>ibis-adapterframework-sap</excludedModule>
-						<excludedModule>ibis-adapterframework-tibco</excludedModule>
-						<excludedModule>ibis-adapterframework-idin</excludedModule>
+						<excludedModule>frankframework-sap</excludedModule>
+						<excludedModule>frankframework-tibco</excludedModule>
+						<excludedModule>frankframework-idin</excludedModule>
 					</excludedModules>
 					<noticeMessage>{0} - using: {1}</noticeMessage>
 					<excludeOptional>true</excludeOptional>
@@ -655,7 +655,7 @@
 					<excludes>
 						<exclude>it.**</exclude>
 					</excludes>
-					<argLine>@{argLine} -Dfile.encoding=CP-1252 --illegal-access=permit</argLine>
+					<argLine>@{argLine} -Dfile.encoding=CP-1252 --illegal-access=permit --add-opens java.base/java.io=ALL-UNNAMED</argLine>
 				</configuration>
 			</plugin>
 			<plugin>
@@ -795,8 +795,8 @@
 							<configuration>
 								<property>iaf.rootdir</property>
 								<project>
-									<groupId>org.ibissource</groupId>
-									<artifactId>ibis-adapterframework-parent</artifactId>
+									<groupId>org.frankframework</groupId>
+									<artifactId>frankframework-parent</artifactId>
 								</project>
 							</configuration>
 						</execution>
@@ -871,7 +871,7 @@
 							</tag>
 						</tags>
 						<useStandardDocletOptions>true</useStandardDocletOptions>
-						<skippedModules>ibis-adapterframework-test,ibis-adapterframework-example,ibis-adapterframework-webapp,ibis-adapterframework-console-frontend</skippedModules>
+						<skippedModules>frankframework-test,frankframework-example,frankframework-webapp,frankframework-console-frontend</skippedModules>
 					</configuration>
 					<executions>
 						<execution>
@@ -1198,7 +1198,7 @@
 						<extensions>true</extensions>
 						<configuration>
 							<serverId>ossrh</serverId>
-							<nexusUrl>https://oss.sonatype.org/</nexusUrl>
+							<nexusUrl>https://s01.oss.sonatype.org/</nexusUrl>
 							<autoReleaseAfterClose>false</autoReleaseAfterClose>
 						</configuration>
 					</plugin>
@@ -1207,11 +1207,11 @@
 			<distributionManagement>
 				<repository>
 					<id>ossrh</id>
-					<url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
+					<url>https://s01.oss.sonatype.org/service/local/staging/deploy/maven2/</url>
 				</repository>
 				<snapshotRepository>
 					<id>ossrh</id>
-					<url>https://oss.sonatype.org/content/repositories/snapshots</url>
+					<url>https://s01.oss.sonatype.org/content/repositories/snapshots</url>
 				</snapshotRepository>
 				<site>
 					<id>www.ibissource.org</id>
@@ -1288,7 +1288,6 @@
 				</property>
 			</activation>
 			<modules>
-				<module>ifsa</module>
 				<module>sap</module>
 				<module>tibco</module>
 				<module>idin</module>
@@ -1376,13 +1375,17 @@
 								<artifactId>frank-doc-frontend</artifactId>
 								<version>${frankdoc.version}</version>
 							</frontendArtifact>
+							<additionalJOptions>
+								<additionalJOption>-J--add-opens=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED</additionalJOption>
+								<additionalJOption>-J--add-opens=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED</additionalJOption>
+							</additionalJOptions>
 							<additionalOptions>
 								<additionalOption>-outputDirectory</additionalOption>
 								<additionalOption>${project.build.directory}/frankdoc</additionalOption>
 								<additionalOption>-digesterRulesPath</additionalOption>
 								<additionalOption>${project.basedir}/core/src/main/resources/digester-rules.xml</additionalOption>
 								<additionalOption>-rootClass</additionalOption>
-								<additionalOption>nl.nn.adapterframework.configuration.Configuration</additionalOption>
+								<additionalOption>org.frankframework.configuration.Configuration</additionalOption>
 								<additionalOption>-frankFrameworkVersion</additionalOption>
 								<additionalOption>${project.version}</additionalOption>
 							</additionalOptions>
@@ -1390,9 +1393,9 @@
 							<outputDirectory>${project.build.directory}/frankdoc</outputDirectory>
 							<source>${maven.compiler.source}</source>
 							<useStandardDocletOptions>false</useStandardDocletOptions>
-							<appendTo>ibis-adapterframework-core</appendTo>
-							<finalName>ibis-adapterframework-parent-${project.version}</finalName>
-							<skippedModules>ibis-adapterframework-test,ibis-adapterframework-example,ibis-adapterframework-webapp,ibis-adapterframework-console-backend,ibis-adapterframework-console-frontend</skippedModules>
+							<appendTo>frankframework-core</appendTo>
+							<finalName>frankframework-parent-${project.version}</finalName>
+							<skippedModules>frankframework-test,frankframework-example,frankframework-webapp,frankframework-console-backend,frankframework-console-frontend</skippedModules>
 						</configuration>
 						<executions>
 							<execution>
